2011-01-15  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #12243: Information on storage location of broken links is wrong in text
	* Fixed bug #12232: Redirects to https get reported as 404 (thanks to Andreas Lappe)

2011-01-08  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #12019: Do not display the format of the date of the last check
	* Fixed bug #12026: Combine columns Type, Headline and Field
	* Fixed bug #12022: Add CSH labels for the labels of the Scheduler job
	* Fixed bug #12024: Remove cellspacing (thanks to Steffen Gebert)
	* Fixed bug #12025: Add link to scheduler

2011-01-07  Christopher  <chrissitopher@gmx.de>

	* Followup to bug #11269: Proofread the manual
	* Followup to bug #11822: Add extension description in ext_emconf.php
	* Fixed bug #12008: Row "Title" should be called "Headline"
	* Fixed bug #12009: Display a nice text, if an element does not have a headline

2011-01-07  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Followup to bug #11794: If website root is active, searching for links does not work

2011-01-06  Christopher  <chrissitopher@gmx.de>

	* Followup to bug #11836: Make use of Flash Messages
	* Fixed bug #11888: Button "Check Links" only checks those categories of links which are marked with the checkboxes below
	* Fixed bug #11269: Proofread the manual

2011-01-05  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug #11794: If website root is active, searching for links does not work

2011-01-05  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11797: linkvalidator saves translated texts in the database which is not good (thanks to Michael Miousse and Philipp Gampe)
	* Fixed bug #11802: Field linktitle often stays empty (thanks to Philipp Gampe)
	* Followup to bug #11776: URL/Linktarget for files is broken

2011-01-04  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11889: Clean up CSS

2011-01-03  Christopher  <chrissitopher@gmx.de>
