@@ -2,6 +2,7 @@
 
 	* Fixed bug #12243: Information on storage location of broken links is wrong in text
 	* Fixed bug #12232: Redirects to https get reported as 404 (thanks to Andreas Lappe)
+	* Fixed bug #12235: Reporting errors does not work with cURL
 
 2011-01-08  Christopher  <chrissitopher@gmx.de>
 
